[package]
name = "termdaw"
version = "0.1.0"
authors = ["Cody Bloemhard <codybloemhard@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# default = ["lv2"]
lv2 = ["dep:lv2-host-minimal"]

[dependencies]
mlua = { version = "0.9.8", features = ["lua53", "vendored"] }
hound = "3.5.1"
rubato = "0.15.0"
toml = "0.8.13"
serde = { version = "1.0.202", features = ["derive"] }
skim = "0.10.4"
sdl2 = "0.36.0"
lv2-host-minimal = { version = "0.1.4", optional = true }
fnrs = "0.1.6"
sampsyn = "0.1.4"
floww = "0.1.10"
term-basics-linux = "1.0.0"
zen-colour = "1.1.1"
